Terminada a parte estética da página inicial

--- a/Página inicial.html
+++ b/Página inicial.html
@@ -5,10 +5,22 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <img src="Imagens/menu.png" alt="menu" width="50" height="50"/>
         <header>
-            <h1>Estacionado</h1>
+            <h1 style="text-align: center;"><span>
+                <img src="Imagens/menu.png" alt="menu" width="50" height="50"/>
+                Estacionado
+                <img src="Imagens/Logo.png" alt='logo' width="40" height="40"/>
+            </span></h1>
         </header>
-        <img src="Imagens/Logo.png" alt='logo' width="40" height="40"/>
+        <hr>
+        <h2 style="text-align: center;"> Piso 1 </h2>
+        <hr width = "900">
+        <h2 style="text-align: center;"> Piso 2 </h2>
+        <hr width = "900">
+        <h2 style="text-align: center;"> Piso 3 </h2>
+        <hr width = "900">
+        <h2 style="text-align: center;"> Piso 4 </h2>
+        <hr width = "900">
+        <img src="Imagens/tarefas.png" alt='tarefas' width="50" height="50" align='right' style="vertical-align:right;margin:0px 10px"/>
     </body>
 </html>
