--- a/Página inicial.html
+++ b/Página inicial.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>Estacionado - Página Inicial</title>
+        <title> Estacionado - Página Inicial </title>
         <meta charset="UTF-8">
     </head>
     <body>
         <header>
             <h1 style="text-align: center;"><span>
-                <img src="Imagens/menu.png" alt="menu" width="50" height="50"/>
+                <a href="menu.html">
+                    <img src="Imagens/menu.png" alt="menu" width="50" height="50">
+                </a>
                 Estacionado
-                <img src="Imagens/Logo.png" alt='logo' width="40" height="40"/>
+                <img src="Imagens/Logo.png" alt='logo' width="40" height="40">
             </span></h1>
         </header>
-        <hr>
-        <h2 style="text-align: center;"> Piso 1 </h2>
-        <hr width = "900">
-        <h2 style="text-align: center;"> Piso 2 </h2>
-        <hr width = "900">
-        <h2 style="text-align: center;"> Piso 3 </h2>
-        <hr width = "900">
-        <h2 style="text-align: center;"> Piso 4 </h2>
-        <hr width = "900">
-        <img src="Imagens/tarefas.png" alt='tarefas' width="50" height="50" align='right' style="vertical-align:right;margin:0px 10px"/>
+        <main>
+            <hr>
+            <a href="Piso1.html">
+                <h2 style="text-align: center;"> Piso 1 </h2>
+            </a>
+            <hr width = "900">
+            <h2 style="text-align: center;"> Piso 2 </h2>
+            <hr width = "900">
+            <h2 style="text-align: center;"> Piso 3 </h2>
+            <hr width = "900">
+            <h2 style="text-align: center;"> Piso 4 </h2>
+            <hr width = "900">
+            <a href="tarefas.html">
+                <img src="Imagens/tarefas.png" alt='tarefas' 
+                    width="50" height="50" align='right' 
+                    style="vertical-align:right;margin:0px 10px"/>
+            </a>
+        </main>
     </body>
 </html>
