--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -8,10 +8,28 @@
 
     <!--Cabeçalho igual para todas as páginas-->
     <body>
-        <img src="Imagens/menu.png" alt="menu" width="50" height="50"/>
         <header>
-            <h1>Estacionado</h1>
-            <img src="Imagens/Logo.png" alt='logo' width="40" height="40"/>
+            <img src="Imagens/menu.png" width="50" height="50" alt= "Botão de menu"/>
+            <h1>
+                Estacionado
+            </h1>
+            <img src="Imagens/Logo.png" width="40" height="40" alt="Logo do aplicativo"/>
         </header>
+        <main>
+            <h2>
+                Selecione a data que deseja analisar:
+            </h2>
+    <!--Três hiperlinks que levam a mesma página (Uso de caso envolvia apenas um deles)-->
+            <a href="Historico.html">
+                Última semana
+            </a>
+            <a href="Histórico.html">
+                Último mês
+            </a>
+            <a href="Histórico.html">
+                Escolher período
+            </a>
+        </main>
+
     </body>
 </html>
