better icon- Lista de tarefas

--- a/Página inicial.html
+++ b/Página inicial.html
@@ -27,7 +27,7 @@
             <h2 style="text-align: center;"> Piso 4 </h2>
             <hr width = "900">
             <a href="tarefas.html">
-                <img src="Imagens/tarefas.png" alt='tarefas' 
+                <img src="Imagens/clipboard.png" alt='tarefas' 
                     width="50" height="50" align='right' 
                     style="vertical-align:right;margin:0px 10px"/>
             </a>
