--- a/detalhes_vaga.html
+++ b/detalhes_vaga.html
@@ -3,5 +3,5 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Estacionado - Analise do histórico</title>
+        <title>Estacionado - Detalhes da vaga</title>
     </head>
