--- a/Skets/detalhes_vaga.html
+++ b/Skets/detalhes_vaga.html
@@ -5,3 +5,7 @@
         <meta charset="UTF-8">
         <title>Estacionado - Detalhes da vaga</title>
     </head>
+    <body>
+    </body>
+</html>
+
