--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Estacionado - Analise do histórico</title>
+        <title>Estacionado- analise do histórico</title>
     </head>
 
     <!--Cabeçalho igual para todas as páginas-->
@@ -32,6 +32,12 @@
             <h3>
                 Saída: 23:40
             </h3>
+
+            <!--"Botão"(Hiperlink por enquanto) de voltar-->
+            
+            <a> href="Página inicial.html"
+                <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
+            </a>
         </main>
     </body>
 </html>
