--- a/Sketches/Analise_hist.html
+++ b/Sketches/Analise_hist.html
@@ -9,11 +9,11 @@
     <!--Cabeçalho igual para todas as páginas-->
     <body>
         <header>
-            <img src="Imagens/menu.png" width="50" height="50" alt= "Botão de menu"/>
+            <img src="../Imagens/menu.png" width="50" height="50" alt= "Botão de menu"/>
             <h1>
                 Estacionado
             </h1>
-            <img src="Imagens/Logo.png" width="40" height="40" alt="Logo do aplicativo"/>
+            <img src="../Imagens/Logo.png" width="40" height="40" alt="Logo do aplicativo"/>
         </header>
         <main>
             <h2>
