--- a/Sketches/Página inicial.html
+++ b/Sketches/Página inicial.html
@@ -8,10 +8,10 @@
         <header>
             <h1 style="text-align: center;"><span>
                 <a href="menu.html">
-                    <img src="Imagens/menu.png" alt="menu" width="50" height="50">
+                    <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
                 </a>
                 Estacionado
-                <img src="Imagens/Logo.png" alt='logo' width="40" height="40">
+                <img src="../Imagens/Logo.png" alt='logo' width="40" height="40">
             </span></h1>
         </header>
         <main>
@@ -27,7 +27,7 @@
             <h2 style="text-align: center;"> Piso 4 </h2>
             <hr width = "900">
             <a href="tarefas.html">
-                <img src="Imagens/clipboard.png" alt='tarefas' 
+                <img src="../Imagens/clipboard.png" alt='tarefas' 
                     width="50" height="50" align='right' 
                     style="vertical-align:right;margin:0px 10px"/>
             </a>
