--- a/Sketches/detalhes_vaga.html
+++ b/Sketches/detalhes_vaga.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-    <head>
-        <meta charset="UTF-8">
-        <title>Estacionado - Detalhes da vaga</title>
-    </head>
-    <body>
-    </body>
-</html>
-
+<html>
+<head>
+    <title> Estacionado - Piso 1 </title>
+    <meta charset="UTF-8">
+</head>
+<body>
+<header>
+    <h1><span>
+        <img src="../Imagens/Menu.png" height=30 width=30>
+        Estacionado 
+        <img src="../Imagens/Logo.png" height=30 width=30><hr>
+    </span></h1>
+</header>
