--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -35,9 +35,10 @@
 
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             
-            <a> href="Página inicial.html"
+            <a href="Pagina_inicial.html">
                 <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
             </a>
+
         </main>
     </body>
 </html>
