--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -32,7 +32,7 @@
     </span></p>
 
     <p><span>
-        <a href="Detalhes vaga.html">
+        <a href="Pagina_inicial.html">
             Historico
             <img src="../Imagens/Graphic.png" height=20 width=20>
         </a>
