--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -14,7 +14,7 @@
 
 <main>
     <h2><span>
-        <a href="Página_inicial.html">
+        <a href="Pagina_inicial.html">
             <img src="../Imagens/back.png" height=25 width=25>
         </a>
         <b>PISO 1</b>
