--- a/Sketches/Analise_hist.html
+++ b/Sketches/Analise_hist.html
@@ -29,6 +29,13 @@
             <a href="Histórico.html">
                 Escolher período
             </a>
+            
+            <!--"Botão"(Hiperlink por enquanto) de voltar-->
+            
+            <a href="Pagina_inicial.html">
+                <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
+            </a>
+
         </main>
 
     </body>
