--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -26,11 +26,12 @@
             <hr width = "900">
             <h2 style="text-align: center;"> Piso 4 </h2>
             <hr width = "900">
-            <a href="tarefas.html">
-                <img src="../Imagens/clipboard.png" alt='tarefas' 
+            <img src="../Imagens/clipboard.png" alt='tarefas' 
                     width="50" height="50" align='right' 
                     style="vertical-align:right;margin:0px 10px"/>
-            </a>
+            <a href="tarefas.html"><p>
+                <b>Tarefas
+            </b></p></a>
         </main>
     </body>
 </html>
