--- a/Sketches/detalhes_vaga.html
+++ b/Sketches/detalhes_vaga.html
@@ -11,3 +11,29 @@
         <img src="../Imagens/Logo.png" height=30 width=30><hr>
     </span></h1>
 </header>
+
+<main>
+    <h2><span>
+        <img src="../Imagens/bleach.png" height=25 width=25>
+        2E
+    </span></h2>
+    <h2>
+        Placa: HJC-9805
+    </h2>
+    <h3>
+        Dono do Carro
+    </h3>
+        [HB20 prata]
+    <h4>
+        Está a caminho
+    </h4>
+    <h5><span>
+        <a href="Pagina_inicial.html">
+            <img src="../Imagens/back.png" height=25 width=25>
+        </a>
+        <img src="../Imagens/clock.png" height=25 width=25>
+        3 Minutos e 40 Segundos
+    </span></h5>
+</main>
+</body>
+</html>
