--- a/Sketches/detalhes_vaga.html
+++ b/Sketches/detalhes_vaga.html
@@ -32,7 +32,7 @@
             <img src="../Imagens/back.png" height=25 width=25>
         </a>
         <img src="../Imagens/clock.png" height=25 width=25>
-        3 Minutos e 40 Segundos
+        3 Minutos e 40 Secs
     </span></h5>
 </main>
 </body>
