--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<html>
+<head>
+    <title> Estacionado - Piso 1 </title>
+    <meta charset="UTF-8">
+</head>
+<body>
+<header>
+    <h1><span>
+        <img src="../Imagens/Menu.png" height=30 width=30>
+        Estacionado 
+        <img src="../Imagens/Logo.png" height=30 width=30><hr>
+    </span></h1>
+</header>
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Estacionado- analise do histórico</title>
-    </head>
-
-    <!--Cabeçalho igual para todas as páginas-->
-    <body>
-        <header>
-            <img src="../Imagens/menu.png" width="50" height="50" alt= "Botão de menu"/>
-            <h1>
-                Estacionado
-            </h1>
-            <img src="../Imagens/Logo.png" width="40" height="40" alt="Logo do aplicativo"/>
-        </header>
         <main>
             <h2>
                 [G4] <!--Vaga escolhida-->
