--- a/Sketches/detalhes_vaga.html
+++ b/Sketches/detalhes_vaga.html
@@ -34,6 +34,10 @@
         <img src="../Imagens/clock.png" height=25 width=25>
         3 Minutos e 40 Segundos
     </span></h5>
+    <!--Botão de Voltar-->
+    <a href="Pagina_inicial.html">
+        <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
+    </a>
 </main>
 </body>
 </html>
