--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1 style="text-align: center;"><span>
+            <h1><span>
                 <a href="menu.html">
                     <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
                 </a>
@@ -16,19 +16,15 @@
         </header>
         <main>
             <hr>
+            <h2>
             <a href="Piso1.html">
-                <h2 style="text-align: center;"> Piso 1 </h2>
-            </a>
-            <hr width = "900">
-            <h2 style="text-align: center;"> Piso 2 </h2>
-            <hr width = "900">
-            <h2 style="text-align: center;"> Piso 3 </h2>
-            <hr width = "900">
-            <h2 style="text-align: center;"> Piso 4 </h2>
-            <hr width = "900">
+             Piso 1 </a><hr>
+             Piso 2<hr>
+             Piso 3 <hr>
+             Piso 4 <hr>
+            </h2>
             <img src="../Imagens/clipboard.png" alt='tarefas' 
-                    width="50" height="50" align='right' 
-                    style="vertical-align:right;margin:0px 10px"/>
+                    width="50" height="50">
             <a href="tarefas.html"><p>
                 <b>Tarefas
             </b></p></a>
