--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -23,11 +23,10 @@
              Piso 3 <hr>
              Piso 4 <hr>
             </h2>
-            <img src="../Imagens/clipboard.png" alt='tarefas' 
+            <a href="tarefas.html">
+                <img src="../Imagens/clipboard.png" alt='tarefas' 
                     width="50" height="50">
-            <a href="tarefas.html"><p>
-                <b>Tarefas
-            </b></p></a>
+            </a>
         </main>
     </body>
 </html>
