--- a/Sketches/Tarefas.html
+++ b/Sketches/Tarefas.html
@@ -10,7 +10,7 @@
         <b>Tarefas</b>
     </span></h1>
     <p>
-        Liberar passagem para saída do carro w 3B<hr>
+        Liberar passagem para saída do carro na 3B<hr>
         Reservada vaga para carro que chegará às 13h<hr>
         Reservar vaga para carro que chegará às 13h<hr>
     </p>
