--- a/Sketches/Analise_hist.html
+++ b/Sketches/Analise_hist.html
@@ -34,7 +34,7 @@
             
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             
-            <a href="Pagina_inicial.html">
+            <a href="Piso1.html">
                 <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
             </a>
         </main>
