--- a/Sketches/detalhes_historico.html
+++ b/Sketches/detalhes_historico.html
@@ -15,17 +15,18 @@
 
     <main>
         <h2><span>
-            <a href="Página inicial.html">
+            <a href="Analise_hist.html">
                 <img src="../Imagens/back.png" height=25 width=25>
             </a>
             <b>PISO 1</b>
         </h2></span>
 
         <a href="Detalhes vaga.html">
-            <img src="../Imagens/Vagas.png">
+            <img src="../Imagens/historico.png">
         </a>
+
         <p><span>
-            Legenda
+            Recomendação
             &emsp;&emsp;
             <img src="../Imagens/Seta1.png" height=10 width=10>
             Área 1
@@ -33,11 +34,14 @@
         </p></span>
 
         <p><span>
-            <a href="Detalhes vaga.html">
-                Historico
-                <img src="../Imagens/Graphic.png" height=20 width=20>
-            </a>
+            Área pouco utilizada
         </p></span>
+
+        <p><span>
+            Área muito utilizada
+        </p></span>
+
+
     </main>
 
 
