--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -20,10 +20,14 @@
         </a>
         <b>PISO 1</b>
     </span></h2>
-
-    <a href="Detalhes vaga.html">
-        <img src="../Imagens/Vagas.png">
+    <span>
+    <a href="detalhes_vaga.html">
+        <img src="../Imagens/Vagas1.png">
     </a>
+    <a href="detalhes_cliente.html">
+        <img src="../Imagens/Vagas2.png">
+    </a>
+    </span>
     <p><span>
         Legenda
         &emsp;&emsp;
