--- a/Sketches/Analise_hist.html
+++ b/Sketches/Analise_hist.html
@@ -20,15 +20,13 @@
                 Selecione a data que deseja analisar:
             </h2>
     <!--Três hiperlinks que levam a mesma página (Uso de caso envolvia apenas um deles)-->
-            <p><a href="Historico.html">
+            <p><a href="detalhes_historico.html">
                 Última semana
             </a></p>
-            <p><a href="Histórico.html">
+            <p><a href="detalhes_historico.html">
                 Último mês
             </a></p>
-            
-
-            <p><a href="Histórico.html">
+            <p><a href="detalhes_historico.html">
                 Escolher período
             </a></p>
             
