--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -10,8 +10,8 @@
                 <a href="menu.html">
                     <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
                 </a>
-                Estacionado
-                <img src="../Imagens/Logo.png" alt='logo' width="40" height="40">
+                &emsp;Estacionado&emsp;
+                <img src="../Imagens/Logo.png" alt='logo' width="50" height="50">
             </span></h1>
         </header>
         <main>
