--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <title> Estacionado - Piso 1 </title>
     <meta charset="UTF-8">
@@ -6,9 +6,9 @@
 <body>
 <header>
     <h1><span>
-        <img src="../Imagens/Menu.png" height=30 width=30>
-        Estacionado 
-        <img src="../Imagens/Logo.png" height=30 width=30><hr>
+        <img src="../Imagens/Menu.png" height=50 width=50>
+        &emsp;Estacionado&emsp;
+        <img src="../Imagens/Logo.png" height=50 width=50><hr>
     </span></h1>
 </header>
 
@@ -32,7 +32,7 @@
 
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             
-            <a href="Pagina_inicial.html">
+            <a href="Piso1.html">
                 <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
             </a>
 
