--- a/Sketches/Analise_hist.html
+++ b/Sketches/Analise_hist.html
@@ -11,8 +11,8 @@
         <header>
             <h1><span>
                 <img src="../Imagens/menu.png" width="50" height="50" alt= "Botão de menu"/>
-                Estacionado
-                <img src="../Imagens/Logo.png" width="40" height="40" alt="Logo do aplicativo"/><hr>
+                &emsp;Estacionado&emsp;
+                <img src="../Imagens/Logo.png" width="50" height="50" alt="Logo do aplicativo"/><hr>
             </span></h1>
         </header>
         <main>
