--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -13,13 +13,16 @@
 </header>
 
         <main>
+
             <h2>
                 [G4] <!--Vaga escolhida-->
             </h2>
+            <h3><span>
             <img src="../Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
-            <h3>
                 Franscisco Lid
             </h3>
+            </span>
+            
             <h1>
                 HJC8607 <!--Placa do veículo-->
             </h1>
