--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -25,8 +25,10 @@
             </h2>
             <a href="tarefas.html">
                 <img src="../Imagens/clipboard.png" alt='tarefas' 
-                    width="50" height="50">
-            </a>
+                    width="50" height="50"></a>
+            <a href="tarefas.html"><p>
+                <b>Tarefas
+            </b></p></a>
         </main>
     </body>
 </html>
