--- a/Sketches/Analise_hist.html
+++ b/Sketches/Analise_hist.html
@@ -10,7 +10,9 @@
     <body>
         <header>
             <h1><span>
-                <img src="../Imagens/menu.png" width="50" height="50" alt= "Botão de menu"/>
+                <a href="menu.html">
+                    <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
+                </a>
                 &emsp;Estacionado&emsp;
                 <img src="../Imagens/Logo.png" width="50" height="50" alt="Logo do aplicativo"/><hr>
             </span></h1>
