--- a/Sketches/configuracoes.html
+++ b/Sketches/configuracoes.html
@@ -7,7 +7,9 @@
 <body>
 <header>
     <h1><span>
-        <img src="../Imagens/Menu.png" height=30 width=30>
+        <a href="menu.html">
+            <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
+        </a>
          
         <img src="../Imagens/Logo.png" height=30 width=30><hr>
     </span></h1>
