--- a/Sketches/Analise_hist.html
+++ b/Sketches/Analise_hist.html
@@ -14,8 +14,9 @@
                     <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
                 </a>
                 &emsp;Estacionado&emsp;
-                <img src="../Imagens/Logo.png" width="50" height="50" alt="Logo do aplicativo"/><hr>
+                <img src="../Imagens/Logo.png" width="50" height="50" alt="Logo do aplicativo"/>
             </span></h1>
+            <hr>
         </header>
         <main>
             <h2>
