--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -10,8 +10,8 @@
             <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
         </a>
         &emsp;Estacionado&emsp;
-        <img src="../Imagens/Logo.png" height=50 width=50><hr>
-    </span></h1>
+        <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50>
+    </span></h1><hr>
 </header>
         <main>
             <h2>
