--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -20,15 +20,13 @@
             <h3><span>
             <img src="../Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
                 Franscisco Lid
-            </h3>
-            </span>
+            </span></h3>
+            
             <h1>
                 HJC8607 <!--Placa do veículo-->
             </h1>
             <h3>
-                Chegada: 14:36
-            </h3>
-            <h3>
+                Chegada: 14:36 <br>
                 Saída: 23:40
             </h3>
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
