--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
+<!--Cabeçalho-->
 <head>
     <title> Estacionado - Piso 1 </title>
     <meta charset="UTF-8">
 </head>
+
 <body>
 <header>
     <h1><span>
@@ -16,23 +18,23 @@
     </span></h1><hr>
 </header>
         <main>
-            <h2>
-                [G4] <!--Vaga escolhida-->
-            </h2>
-            <h3><span>
+            <h1>
+                [G4] <!--Vaga escolhida Título principal-->
+            </h1>
+            <p><span>
             <img src="../Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
                 Franscisco Lid
-            </h3>
+            </p>
             </span>
             <h1>
-                HJC8607 <!--Placa do veículo-->
+                HJC8607 <!--Placa do veículo importante! Subtítulo-->
             </h1>
-            <h3>
+            <p>
                 Chegada: 14:36
-            </h3>
-            <h3>
+            </p>
+            <p>
                 Saída: 23:40
-            </h3>
+            </p>
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             <a href="Piso1.html">
                 <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
