--- a/Sketches/configuracoes.html
+++ b/Sketches/configuracoes.html
@@ -7,36 +7,25 @@
 <body>
 <header>
     <h1><span>
-        <a href="menu.html">
-            <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
-        </a>
-         
-        <img src="../Imagens/Logo.png" height=30 width=30><hr>
+        <img src="../Imagens/back.png" height=25 width=25>
+        Configurações
+        <img src="../Imagens/gear.png" height=30 width=30><hr>
     </span></h1>
 </header>
 
 <main>
-    <h2><span>
-        <a href="Pagina_inicial.html">
-            <img src="../Imagens/back.png" height=25 width=25>
-        </a>
-        <b>Configurações</b>
-    </span></h2>
-
-    <p><span>
-        Legenda
-        &emsp;&emsp;
-        <img src="../Imagens/Seta1.png" height=10 width=10>
-        Área 1
-        <img src="../Imagens/Seta2.png" height=10 width=10>
-    </span></p>
-
-    <p><span>
-        <a href="Analise_hist.html">
-            Historico
-            <img src="../Imagens/Graphic.png" height=20 width=20>
-        </a>
-    </span></p>
+    <h3>
+        Estabelecimento: .........<br>
+        Responsáveis: ............<br>
+        Contato: .................<br>
+        Endereço: ................<br>
+    </h3>
+    <h3>
+        Editar <br>
+        Perguntas Frequentes <br>
+        Central de ajuda <br>
+    </h3>
+    <img src="../Imagens/back.png" height=25 width=25></imgsrc>
 </main>
 
 
