--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -17,9 +17,10 @@
         <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50>
     </span></h1><hr>
 </header>
+
         <main>
             <h1>
-                [G4] <!--Vaga escolhida Título principal-->
+                [G4] <!--Vaga escolhida= Título principal-->
             </h1>
             <p><span>
             <img src="../Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
@@ -34,10 +35,12 @@
             <p>
                 Saída: 23:40
             </p>
+
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             <a href="Piso1.html">
                 <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
             </a>
         </main>
+
     </body>
 </html>
