--- a/Sketches/detalhes_historico.html
+++ b/Sketches/detalhes_historico.html
@@ -11,14 +11,14 @@
                 <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
             </a>
             &emsp;Estacionado&emsp;
-            <img src="../Imagens/Logo.png" height=50 width=50><hr>
-        </h1></span>
+            <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50>
+        </h1></span><hr>
     </header>
 
     <main>
         <h2><span>
             <a href="Analise_hist.html">
-                <img src="../Imagens/back.png" height=25 width=25>
+                <img src="../Imagens/back.png" alt="Seta de voltar" height=25 width=25>
             </a>
             <b>PISO 1</b>
         </h2></span>
@@ -30,9 +30,9 @@
         <p><span>
             Recomendação
             &emsp;&emsp;
-            <img src="../Imagens/Seta1.png" height=10 width=10>
+            <img src="../Imagens/Seta1.png" alt="Voltar" height=10 width=10>
             Área 1
-            <img src="../Imagens/Seta2.png" height=10 width=10>
+            <img src="../Imagens/Seta2.png" alt="Avançar" height=10 width=10>
         </p></span>
 
         <p><span>
