--- a/Sketches/detalhes_historico.html
+++ b/Sketches/detalhes_historico.html
@@ -8,11 +8,11 @@
     <header>
         <h1><span>
             <a href="menu.html">
-                <img src="../Imagens/menu.png" alt="menu" width="50" height="50" alt="Menu">
+                <img src="../Imagens/menu.png" width="50" height="50" alt="Menu">
             </a>
             &emsp;Estacionado&emsp;
             <img src="../Imagens/Logo.png" height=50 width=50>
-        </h1></span>
+        </span></h1>
         <hr>
         
     </header>
@@ -23,10 +23,10 @@
                 <img src="../Imagens/back.png" alt="Seta de voltar" height=25 width=25>
             </a>
             <b>PISO 1</b>
-        </h2></span>
+        </span></h2>
 
-        <a href="Detalhes vaga.html">
-            <img src="../Imagens/historico.png">
+        <a href="detalhes_vaga.html">
+            <img src="../Imagens/historico.png" alt='Gráfico'>
         </a>
 
         <p><span>
@@ -35,15 +35,12 @@
             <img src="../Imagens/Seta1.png" alt="Voltar" height=10 width=10>
             Área 1
             <img src="../Imagens/Seta2.png" alt="Avançar" height=10 width=10>
-        </p></span>
+        </span></p>
 
         <p><span>
-            Área pouco utilizada
-        </p></span>
-
-        <p><span>
+            Área pouco utilizada <br>
             Área muito utilizada
-        </p></span>
+        </span></p>
 
 
     </main>
