--- a/Sketches/detalhes_historico.html
+++ b/Sketches/detalhes_historico.html
@@ -11,7 +11,7 @@
                 <img src="../Imagens/menu.png" width="50" height="50" alt="Menu">
             </a>
             &emsp;Estacionado&emsp;
-            <img src="../Imagens/Logo.png" height=50 width=50>
+            <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50>
         </span></h1>
         <hr>
         
