--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -19,16 +19,16 @@
 </header>
 
         <main>
-            <h1>
-                [G4] <!--Vaga escolhida= Título principal-->
-            </h1>
+            <h2>
+                [G4] <!--Vaga escolhida -->
+            </h2>
             <p><span>
             <img src="../Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
                 Franscisco Lid
             </span></p>        
-            <h1>
+            <h2>
                 HJC8607 <!--Placa do veículo importante! Subtítulo-->
-            </h1>
+            </h2>
             <p>
                 Chegada: 14:36
             </p>
