--- a/Sketches/detalhes_vaga.html
+++ b/Sketches/detalhes_vaga.html
@@ -11,13 +11,13 @@
             <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
         </a>
         &emsp;Estacionado&emsp;
-        <img src="../Imagens/Logo.png" height=50 width=50><hr>
-    </span></h1>
+        <img src="../Imagens/Logo.png" height=50 width=50 alt="Logo">
+    </span></h1><hr>
 </header>
 
 <main>
     <h2><span>
-        <img src="../Imagens/bleach.png" height=25 width=25>
+        <img src="../Imagens/bleach.png" alt="Triângulo" height=25 width=25>
         2E
     </span></h2>
     <h2>
@@ -32,9 +32,9 @@
     </h4>
     <h5><span>
         <a href="Piso1.html">
-            <img src="../Imagens/back.png" height=25 width=25>
+            <img src="../Imagens/back.png" alt="Botão de voltar" height=25 width=25>
         </a>
-        <img src="../Imagens/clock.png" height=25 width=25>
+        <img src="../Imagens/clock.png" height=25 width=25 alt="Relógio">
         3 Minutos e 40 Secs
     </span></h5>
 </main>
