--- a/Sketches/configuracoes.html
+++ b/Sketches/configuracoes.html
@@ -7,10 +7,11 @@
 <body>
 <header>
     <h1><span>
-        <img src="../Imagens/back.png" height=25 width=25>
+        <img src="../Imagens/back.png" height=25 width=25 alt="Voltar">
         Configurações
-        <img src="../Imagens/gear.png" height=30 width=30><hr>
+        <img src="../Imagens/gear.png" height=30 width=30 alt="Configurações">
     </span></h1>
+    <hr>
 </header>
 
 <main>
