--- a/Sketches/configuracoes.html
+++ b/Sketches/configuracoes.html
@@ -26,7 +26,7 @@
         Perguntas Frequentes <br>
         Central de ajuda <br>
     </h3>
-    <img src="../Imagens/back.png" height=25 width=25></imgsrc>
+    <img src="../Imagens/back.png" height=25 width=25 alt= "Voltar"></imgsrc>
 </main>
 
 
