--- a/Sketches/configuracoes.html
+++ b/Sketches/configuracoes.html
@@ -7,10 +7,9 @@
 <body>
 <header>
     <h1><span>
-        <img src="../Imagens/back.png" height=25 width=25>
         Configurações
-        <img src="../Imagens/gear.png" height=30 width=30><hr>
-    </span></h1>
+        <img src="../Imagens/gear.png" alt="Configurações" height=30 width=30>
+    </span></h1><hr>
 </header>
 
 <main>
@@ -25,7 +24,8 @@
         Perguntas Frequentes <br>
         Central de ajuda <br>
     </h3>
-    <img src="../Imagens/back.png" height=25 width=25></imgsrc>
+
+    <a href="menu.html"><img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
 </main>
 
 
