--- a/Sketches/configuracoes.html
+++ b/Sketches/configuracoes.html
@@ -25,7 +25,7 @@
         Central de ajuda <br>
     </h3>
 
-    <a href="menu.html"><img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
+    <a href="menu.html"><img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25></a>
 </main>
 
 
