--- a/Sketches/menu.html
+++ b/Sketches/menu.html
@@ -17,15 +17,22 @@
         <main>
             <hr>
             <h2>
-                Editar Estacionamento <hr>
-                Editar Pisos <hr>
-                Adicionar Pisos <hr>
+                Editar Estacionamento 
+            </h2><hr>
+            <h2>
+                Editar Pisos 
+            </h2><hr>
+            <h2>
+                Adicionar Pisos 
+            </h2><hr>
+
+            <h2>
                 <a href="configuracoes.html">
-                    Configrações </a><hr>
-            </h2>
+                    Configrações </a>
+            </h2><hr>
+            
             <a href="Pagina_inicial.html">
-                <img src="../Imagens/back.png" alt='botão voltar' 
-                    width="50" height="50"></a>
+                <img src="../Imagens/back.png" alt='botão voltar' width="50" height="50"></a>
         </main>
     </body>
 </html>
