--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -11,14 +11,14 @@
             <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
         </a>
         &emsp;Estacionado&emsp; 
-        <img src="../Imagens/Logo.png" height=50 width=50><hr>
+        <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50><hr>
     </span></h1>
 </header>
 
 <main>
     <h2><span>
         <a href="Pagina_inicial.html">
-            <img src="../Imagens/back.png" height=25 width=25>
+            <img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25 alt="Botão de voltar">
         </a>
         <b>PISO 1</b>
     </span></h2>
