--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -11,8 +11,8 @@
             <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
         </a>
         &emsp;Estacionado&emsp; 
-        <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50><hr>
-    </span></h1>
+        <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50>
+    </span></h1><hr>
 </header>
 
 <main>
@@ -24,24 +24,24 @@
     </span></h2>
     <span>
     <a href="detalhes_vaga.html">
-        <img src="../Imagens/Vagas1.png">
+        <img src="../Imagens/Vagas1.png" alt="Atenção">
     </a>
     <a href="detalhes_cliente.html">
-        <img src="../Imagens/Vagas2.png">
+        <img src="../Imagens/Vagas2.png" alt="Vagas ocupadas">
     </a>
     </span>
     <p><span>
         Legenda
         &emsp;&emsp;
-        <img src="../Imagens/Seta1.png" height=10 width=10>
+        <img src="../Imagens/Seta1.png"  alt="Voltar" height=10 width=10>
         Área 1
-        <img src="../Imagens/Seta2.png" height=10 width=10>
+        <img src="../Imagens/Seta2.png" alt="Avançar" height=10 width=10>
     </span></p>
 
     <p><span>
         <a href="Analise_hist.html">
             Historico
-            <img src="../Imagens/Graphic.png" height=20 width=20>
+            <img src="../Imagens/Graphic.png" alt="Histórico" height=20 width=20>
         </a>
     </span></p>
 </main>
