--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <title> Estacionado - Piso 1 </title>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
 <main>
     <h2><span>
         <a href="Pagina_inicial.html">
-            <img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25 alt="Botão de voltar">
+            <img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
         </a>
         <b>PISO 1</b>
     </span></h2>
