--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -18,11 +18,10 @@
             <hr>
             <h2>
             <a href="Piso1.html">
-             Piso 1 </a><hr>
-             Piso 2 <hr>
-             Piso 3 <hr>
-             Piso 4 <hr>
-            </h2>
+             Piso 1 </a></h2><hr>
+             <h2> Piso 2</h2> <hr>
+             <h2> Piso 3</h2> <hr>
+             <h2> Piso 4 </h2> <hr>
             <a href="tarefas.html">
                 <img src="../Imagens/clipboard.png" alt='tarefas' 
                     width="50" height="50"></a>
