--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -3,7 +3,7 @@
 
 <!--Cabeçalho-->
 <head>
-    <title> Estacionado - Piso 1 </title>
+    <title> Estacionado - Detalhes cliente</title>
     <meta charset="UTF-8">
 </head>
 
