--- a/Sketches/detalhes_vaga.html
+++ b/Sketches/detalhes_vaga.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <title> Estacionado - Piso 1 </title>
+    <title> Estacionado - Detalhes Vagas </title>
     <meta charset="UTF-8">
 </head>
 <body>
