--- a/Sketches/menu.html
+++ b/Sketches/menu.html
@@ -28,7 +28,7 @@
 
             <h2>
                 <a href="configuracoes.html">
-                    Configrações </a>
+                    Configurações </a>
             </h2><hr>
             
             <a href="Pagina_inicial.html">
