--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -16,9 +16,9 @@
         </header>
         <main>
             <hr>
-            <h2>
+            <h2> <!--Subtítulos-- Os pisos-->
             <a href="Piso1.html">
-             Piso 1 </a></h2><hr>
+             Piso 1 </a></h2><hr> <!--Piso 1 do fluxo de tela-->
              <h2> Piso 2</h2> <hr>
              <h2> Piso 3</h2> <hr>
              <h2> Piso 4 </h2> <hr>
