--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -7,6 +7,7 @@
 <body>
 <header>
     <h1><span>
+        <!--Redundância novamente-- "Cabeçalho"-->
         <a href="menu.html">
             <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
         </a>
@@ -22,7 +23,11 @@
         </a>
         <b>PISO 1</b>
     </span></h2>
+
+    <!--Forma que o grupo encontrou para simular a interação com a "maquete do estacionamento":-->
     <span>
+
+    <!--Dividida em duas fotos, clica em um lado, vai para uma tela, clica no outro, levado para outro "fluxo" -->
     <a href="detalhes_vaga.html">
         <img src="../Imagens/Vagas1.png" alt="Atenção">
     </a>
