--- a/Sketches/configuracoes.html
+++ b/Sketches/configuracoes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+    <!--Tela sem cabeçalho pois entro justamente no Menu-->
 <head>
     <title> Estacionado - Configurações </title>
     <meta charset="UTF-8">
@@ -13,17 +14,17 @@
 </header>
 
 <main>
-    <h3>
+    <h2>
         Estabelecimento: .........<br>
         Responsáveis: ............<br>
         Contato: .................<br>
         Endereço: ................<br>
-    </h3>
-    <h3>
+    </h2>
+    <p>
         Editar <br>
         Perguntas Frequentes <br>
         Central de ajuda <br>
-    </h3>
+    </p>
 
     <a href="menu.html"><img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25></a>
 </main>
