--- a/Sketches/detalhes_cliente.html
+++ b/Sketches/detalhes_cliente.html
@@ -26,9 +26,9 @@
             <img src="../Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
                 Franscisco Lid
             </span></p>        
-            <h2>
-                HJC8607 <!--Placa do veículo importante! Subtítulo-->
-            </h2>
+            <em>
+                HJC8607 <!--Placa do veículo importante! Enfatizar!-->
+            </em>
             <p>
                 Chegada: 14:36
             </p>
