--- a/Sketches/detalhes_vaga.html
+++ b/Sketches/detalhes_vaga.html
@@ -19,25 +19,25 @@
 <main>
     <h2><span>
         <img src="../Imagens/bleach.png" alt="Triângulo" height=25 width=25>
-        2E
+        2E <!--A vaga em sí-->
     </span></h2>
-    <h2>
+    <em>
         Placa: HJC-9805
-    </h2>
-    <h3>
+    </em>
+    <p>
         Dono do Carro
-    </h3>
+    </p>
         [HB20 prata]
-    <h4>
+    <p>
         Está a caminho
-    </h4>
-    <h5><span>
+    </p>
+    <span>
         <a href="Piso1.html">
             <img src="../Imagens/back.png" alt="Botão de voltar" height=25 width=25>
         </a>
         <img src="../Imagens/clock.png" height=25 width=25 alt="Relógio">
         3 Minutos e 40 Secs
-    </span></h5>
+    </span>
 </main>
 </body>
 </html>
