--- a/Sketches/Piso1.html
+++ b/Sketches/Piso1.html
@@ -7,7 +7,7 @@
 <body>
 <header>
     <h1><span>
-        <!--Redundância novamente-- "Cabeçalho"-->
+        <!--Redundância novamente-"Cabeçalho"-->
         <a href="menu.html">
             <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
         </a>
