--- a/Sketches/Pagina_inicial.html
+++ b/Sketches/Pagina_inicial.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <hr>
-            <h2> <!--Subtítulos-- Os pisos-->
+            <h2> <!--Subtítulos-Os pisos-->
             <a href="Piso1.html">
              Piso 1 </a></h2><hr> <!--Piso 1 do fluxo de tela-->
              <h2> Piso 2</h2> <hr>
