--- a/Sketches/Tarefas.html
+++ b/Sketches/Tarefas.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<!--Futuro popup, sem o cabeçalho-->
+<!--Futuro popup, sem o cabeçalho comum a todos-->
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <title>Estacionado - Tarefas</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Estacionado - Tarefas</title>
+    </head>
+    <body>
+        <header>
+            <h1><span>
+                <img src="../Imagens/clipboard.png" alt='tarefas' width="50" height="50">
+                <b>Tarefas</b>
+            </span></h1>
+        </header>
 
-    <h1><span>
-        <img src="../Imagens/clipboard.png" alt='tarefas' width="50" height="50">
-        <b>Tarefas</b>
-    </span></h1>
+        <main>
+            <p>Liberar passagem para saída do carro na 3B </p><hr>
+            <p>Reservada vaga para carro que chegará às 13h </p><hr>
+            <p>Reservar vaga para carro que chegará às 13h </p><hr>
+        
 
-
-    <p>Liberar passagem para saída do carro na 3B </p><hr>
-    <p>Reservada vaga para carro que chegará às 13h </p><hr>
-    <p>Reservar vaga para carro que chegará às 13h </p><hr>
-   
-
-    <a href="Pagina_inicial.html">
-    <img src="../Imagens/back.png" alt='Botão de voltar' width="25" height="25">
-    </a></body>
+            <a href="Pagina_inicial.html">
+            <img src="../Imagens/back.png" alt='Botão de voltar' width="25" height="25">
+            </a>
+        </main>
+    </body>
 </html>
