--- a/Sketches_html/Piso1.html
+++ b/Sketches_html/Piso1.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <h2><span>
-                <a href="Pagina_inicial.html">
+                <a href="índex.html">
                     <img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
                 </a>
                 <b>PISO 1</b>
