--- a/Sketches_html/menu.html
+++ b/Sketches_html/menu.html
@@ -9,7 +9,7 @@
             <h1><span>
                 Estacionamento MultiPark Insper <br>
                 End: Rua Quatá, 200, Vila Olímpia, SP
-                <a href="Pagina_inicial.html">
+                <a href="índex.html">
                     <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
                 </a>
             </span></h1>
@@ -31,7 +31,7 @@
                     Configurações </a>
             </h2><hr>
             
-            <a href="Pagina_inicial.html">
+            <a href="índex.html">
                 <img src="../Imagens/back.png" alt='botão voltar' width="50" height="50"></a>
         </main>
     </body>
