--- a/Sketches_html/Tarefas.html
+++ b/Sketches_html/Tarefas.html
@@ -19,7 +19,7 @@
             <p>Reservar vaga para carro que chegará às 13h </p><hr>
         
 
-            <a href="índex.html">
+            <a href="index.html">
             <img src="../Imagens/back.png" alt='Botão de voltar' width="25" height="25">
             </a>
         </main>
