linkando html e csss

--- a/detalhes_cliente.html
+++ b/detalhes_cliente.html
@@ -5,6 +5,8 @@
 <head>
     <title> Estacionado - Detalhes cliente</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Sketches_css/reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
