--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Estacionado - Analise do histórico</title>
+        <link rel="stylesheet" href="Sketches_css/reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <!--Cabeçalho igual para todas as páginas-->
