--- a/Piso1.html
+++ b/Piso1.html
@@ -3,6 +3,8 @@
     <head>
         <title> Estacionado - Piso 1 </title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="Sketches_css/reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
