--- a/Tarefas.html
+++ b/Tarefas.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Estacionado - Tarefas</title>
+        <link rel="stylesheet" href="Sketches_css/reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
