--- a/configuracoes.html
+++ b/configuracoes.html
@@ -4,6 +4,8 @@
 <head>
     <title> Estacionado - Configurações </title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Sketches_css/reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <header>
