--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -3,6 +3,8 @@
 <head>
     <title> Estacionado - Histórico </title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Sketches_css/reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <!--Com cabeçalho-->
