--- a/Tarefas.html
+++ b/Tarefas.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Estacionado - Tarefas</title>
     </head>
+    
     <body>
         <header>
             <h1><span>
@@ -14,10 +15,17 @@
         </header>
 
         <main>
-            <p>Liberar passagem para saída do carro na 3B </p><hr>
-            <p>Reservada vaga para carro que chegará às 13h </p><hr>
-            <p>Reservar vaga para carro que chegará às 13h </p><hr>
-        
+            <ul class="tarefas_list">
+                <li>
+                    <p>Liberar passagem para saída do carro na 3B </p>
+                </li>
+                <li>
+                    <p>Reservada vaga para carro que chegará às 13h </p>
+                </li>
+                <li>
+                    <p>Reservar vaga para carro que chegará às 13h </p>
+                </li>
+            </ul>
 
             <a href="index.html">
             <img src="../Imagens/back.png" alt='Botão de voltar' width="25" height="25">
