--- a/teste.html
+++ b/teste.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <title> Estacionado - Detalhes Vagas </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Sketches_css/reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
 <body>
     <header>
@@ -25,5 +24,51 @@
         <b>PISO 1</b>
     </span></h2>
     </main>
+    <div class="linha">
+        <div class="coluna">
+            <p> </p>
+            <p>1</p>
+            <p>2</p>
+            <p>3</p>
+            <p>4</p>
+            <p>5</p>
+        </div>
+        <div class="coluna">
+            <p>E</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/triangle.png" alt="Vaga agendada">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
+        <div class="coluna">
+            <p>F</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/triangle.png" alt="Vaga agendada">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+        </div>
+        <div class="coluna">
+
+        </div>
+        <div class="coluna">
+            <p>G</p>
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+        </div>
+        <div class="coluna">
+            <p>H</p>
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+            <img src="Imagens/triangle.png" alt="Vaga agendada">
+            <img src="Imagens/circulo-preto-2.png" alt="Vaga ocupada">
+            <img src="Imagens/Circulo-vazio.png" alt="Vaga livre">
+        </div>
+    </div>
+
 </body>
 </html>
