--- a/Tarefas.html
+++ b/Tarefas.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Estacionado - Tarefas</title>
         <link rel="stylesheet" href="Sketches_css/reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styleteste.css">
     </head>
 
     <body>
@@ -32,8 +32,8 @@
         </p>
         <div class="atras">
         </div>
-        <div class="popup">
 
+        <div class="popup">
         <header>
             <h1><span>
                 <img src="../Imagens/clipboard.png" alt='tarefas' width="50" height="50">
