--- a/configuracoes.html
+++ b/configuracoes.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
+         <!--Só um teste-->
+         <p>
+            My sketch is more of a departure, and takes it firmly into Antiqua territory. I
+            added quite a bit of contrast (and should probably tone it back down, at least
+            in the Normal) and the serifs are bracketed. I also widened the overall
+            proportion a bit, so the rounds fit in better with the visually wider seriffed
+            characters. I tried to keep as many of the salient features intact as I could,
+            but it’s a definite departure from Meta. That may not be a bad thing, though,
+            because I do think they look good together, and a real Antiqua would probably
+            have a longer shelf life. Besides the contrast, I haven’t settled on a shape for
+            the ball terminals yet – see what you think of the various options.
+        </p>
+        <p>
+            The slab is closer to what you and I had dicussed in the past, but my grand plan
+            (and the underlying reason why I think Meta Serif should be an Antiqua) is to
+            draw Unit Serif as well, and let that one be a real Egyptian. Its forms are
+            simpler and stiffer anyway, and we’ve already got the serif weight and shape
+            figured out on I, i and j. In the end, I think we’d end up with a serif and slab
+            that could be used together, and they’d be compatible with both FF Meta and FF
+            Unit.
+        </p>
+        <div class="atras">
+        </div>
+
+        <div class="popup">
         <header>
             <h1><span>
                 Configurações
@@ -30,7 +55,6 @@
 
             <a href="menu.html"><img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25></a>
         </main>
-
-
+        </div>
     </body>
 </html>
