Esqueceram de indicar a pasta do css

--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Estacionado - Analise do histórico</title>
         <link rel="stylesheet" href="Sketches_css/reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
 
     <!--Cabeçalho igual para todas as páginas-->
