--- a/detalhes_cliente.html
+++ b/detalhes_cliente.html
@@ -6,7 +6,7 @@
     <title> Estacionado - Detalhes cliente</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Sketches_css/reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
 
 <body>
