--- a/Tarefas.html
+++ b/Tarefas.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Estacionado - Tarefas</title>
         <link rel="stylesheet" href="Sketches_css/reset.css">
-        <link rel="stylesheet" href="styleteste.css">
+        <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
 
     <body>
