--- a/detalhes_vaga.html
+++ b/detalhes_vaga.html
@@ -5,7 +5,7 @@
     <title> Estacionado - Detalhes Vagas </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Sketches_css/reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
     <body>
          <!--Só um teste-->
