--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> Estacionado - Página Inicial </title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="Sketches_css/reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
     <body>
         <header>
