--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -10,7 +10,7 @@
 
     <!--Cabeçalho igual para todas as páginas-->
     <body>
-        <header>
+        <header class="cabeçalho">
             <h1><span>
                 <a href="menu.html">
                     <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
