--- a/Piso1.html
+++ b/Piso1.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
     <body>
-        <header>
+        <header class="cabeçalho">
             <h1><span>
                 <!--Redundância novamente-"Cabeçalho"-->
                 <a href="menu.html">
