--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <!--Com cabeçalho-->
-        <header>
+        <header class="cabeçalho">
             <h1><span>
                 <a href="menu.html">
                     <img src="../Imagens/menu.png" width="50" height="50" alt="Menu">
