--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
     <body>
-        <header>
+        <header class="cabeçalho">
             <h1><span>
                 Estacionamento MultiPark Insper <br>
                 End: Rua Quatá, 200, Vila Olímpia, SP
