--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
     <body>
-        <header>
+        <header class="cabeçalho">
             <h1><span>
                 <a href="menu.html">
                     <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
