--- a/Analise_hist.html
+++ b/Analise_hist.html
@@ -5,20 +5,17 @@
         <meta charset="UTF-8">
         <title>Estacionado - Analise do histórico</title>
         <link rel="stylesheet" href="Sketches_css/reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Sketches_css/style.css">    
     </head>
 
     <!--Cabeçalho igual para todas as páginas-->
     <body>
-        <header>
-            <h1><span>
-                <a href="menu.html">
-                    <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
-                </a>
-                &emsp;Estacionado&emsp;
-                <img src="../Imagens/Logo.png" width="50" height="50" alt="Logo do aplicativo"/>
-            </span></h1>
-            <hr>
+        <header class="cabecario">
+            <ul>
+                <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
+                <il><h1 id="title">Estacionado</h1></il>
+                <il><img src="Imagens/Logo.png"alt="Logo"></il>
+            </ul>
         </header>
         <main>
             <h2>
