--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
     <head>
         <title> Estacionado - Página Inicial </title>
         <meta charset="UTF-8">
-<<<<<<< HEAD
-=======
         <link rel="stylesheet" href="Sketches_css/reset.css">
->>>>>>> 5220c0f96b51b659a124ab8df7b0b3f3bfe5a6bd
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Sketches_css/style.css">
     </head>
     <body>
-        <header>
-            <h1><span>
-                <a href="menu.html">
-                    <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
-                </a>
-                &emsp;Estacionado&emsp;
-                <img src="../Imagens/Logo.png" alt='logo' width="50" height="50">
-            </span></h1>
+        <header class="cabecario">
+            <ul>
+                <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
+                <il><h1 id="title">Estacionado</h1></il>
+                <il><img src="Imagens/Logo.png"alt="Logo"></il>
+            </ul>
         </header>
         <main>
             <hr>
