--- a/configuracoes.html
+++ b/configuracoes.html
@@ -5,7 +5,7 @@
     <title> Estacionado - Configurações </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Sketches_css/reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
     <body>
         <header>
