--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -4,20 +4,16 @@
     <title> Estacionado - Histórico </title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Sketches_css/reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
     <body>
         <!--Com cabeçalho-->
-        <header>
-            <h1><span>
-                <a href="menu.html">
-                    <img src="../Imagens/menu.png" width="50" height="50" alt="Menu">
-                </a>
-                &emsp;Estacionado&emsp;
-                <img src="../Imagens/Logo.png" alt="Logo" height=50 width=50>
-            </span></h1>
-            <hr>
-
+        <header class="cabecario">
+            <ul>
+                <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
+                <il><h1 id="title">Estacionado</h1></il>
+                <il><img src="Imagens/Logo.png"alt="Logo"></il>
+            </ul>
         </header>
 
         <main>
