--- a/teste.html
+++ b/teste.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
 <body>
-    <header>
-        <h1><span>
-            <a href="menu.html">
-                <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
-            </a>
-            &emsp;Estacionado&emsp;
-            <img src="../Imagens/Logo.png" height=50 width=50 alt="Logo">
-        </span></h1><hr>
+    <header class="cabecario">
+        <ul>
+            <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
+            <il><h1 id="title">Estacionado</h1></il>
+            <il><img src="Imagens/Logo.png"alt="Logo"></il>
+        </ul>
     </header>
     <main>
     <h2><span>
