--- a/teste2.html
+++ b/teste2.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="Sketches_css/style.css">
 </head>
 <body>
-    <header>
+    <header class="cabecario">
         <ul>
             <il><a href="menu.html"><img src="Imagens/menu.png" alt="menu"></a></il>
             <il><h1 id="title">Estacionado</h1></il>
             <il><img src="Imagens/Logo.png"alt="Logo"></il>
         </ul>
-        
     </header>
     <p>oi</p><br>
     <p>oi</p><br>
