Correção nas imagens

--- a/Piso1.html
+++ b/Piso1.html
@@ -17,7 +17,7 @@
         <main>
             <h2><span>
                 <a href="index.html">
-                    <img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
+                    <img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
                 </a>
                 <b>PISO 1</b>
             </span></h2>
@@ -27,24 +27,24 @@
 
             <!--Dividida em duas fotos, clica em um lado, vai para uma tela, clica no outro, levado para outro "fluxo" -->
             <a href="detalhes_vaga.html">
-                <img src="../Imagens/Vagas1.png" alt="Atenção">
+                <img src="Imagens/Vagas1.png" alt="Atenção">
             </a>
             <a href="detalhes_cliente.html">
-                <img src="../Imagens/Vagas2.png" alt="Vagas ocupadas">
+                <img src="Imagens/Vagas2.png" alt="Vagas ocupadas">
             </a>
             </span>
             <p><span>
                 Legenda
                 &emsp;&emsp;
-                <img src="../Imagens/Seta1.png"  alt="Voltar" height=10 width=10>
+                <img src="Imagens/Seta1.png"  alt="Voltar" height=10 width=10>
                 Área 1
-                <img src="../Imagens/Seta2.png" alt="Avançar" height=10 width=10>
+                <img src="Imagens/Seta2.png" alt="Avançar" height=10 width=10>
             </span></p>
 
             <p><span>
                 <a href="Analise_hist.html">
                     Historico
-                    <img src="../Imagens/Graphic.png" alt="Histórico" height=20 width=20>
+                    <img src="Imagens/Graphic.png" alt="Histórico" height=20 width=20>
                 </a>
             </span></p>
         </main>
