--- a/configuracoes.html
+++ b/configuracoes.html
@@ -11,7 +11,7 @@
         <header class="cabeçalho">
             <h1><span>
                 Configurações
-                <img src="../Imagens/gear.png" alt="Configurações" height=30 width=30>
+                <img src="Imagens/gear.png" alt="Configurações" height=30 width=30>
             </span></h1><hr>
         </header>
 
@@ -28,7 +28,7 @@
                 Central de ajuda <br>
             </p>
 
-            <a href="menu.html"><img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25></a>
+            <a href="menu.html"><img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25></a>
         </main>
     
     </body>
