--- a/detalhes_cliente.html
+++ b/detalhes_cliente.html
@@ -40,7 +40,7 @@
                 [G4] <!--Vaga escolhida -->
             </h2>
             <p><span>
-            <img src="../Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
+            <img src="Imagens/change.png" width="40" height="40" alt="Foto do cliente"/>
                 Franscisco Lid
             </span></p>        
             <em>
@@ -55,7 +55,7 @@
 
             <!--"Botão"(Hiperlink por enquanto) de voltar-->
             <a href="Piso1.html">
-                <img src="../Imagens/back.png" height=25 width=25 alt="Botão de voltar">
+                <img src="Imagens/back.png" height=25 width=25 alt="Botão de voltar">
             </a>
         </main>
     </div>
