--- a/detalhes_historico.html
+++ b/detalhes_historico.html
@@ -19,21 +19,21 @@
         <main>
             <h2><span>
                 <a href="Analise_hist.html">
-                    <img src="../Imagens/back.png" alt="Seta de voltar" height=25 width=25>
+                    <img src="Imagens/back.png" alt="Seta de voltar" height=25 width=25>
                 </a>
                 <b>PISO 1</b>
             </span></h2>
 
             <a>
-                <img src="../Imagens/historico.png" alt='Gráfico'>
+                <img src="Imagens/historico.png" alt='Gráfico'>
             </a>
 
             <p><span>
                 Recomendação
                 &emsp;&emsp;
-                <img src="../Imagens/Seta1.png" alt="Voltar" height=10 width=10>
+                <img src="Imagens/Seta1.png" alt="Voltar" height=10 width=10>
                 Área 1
-                <img src="../Imagens/Seta2.png" alt="Avançar" height=10 width=10>
+                <img src="Imagens/Seta2.png" alt="Avançar" height=10 width=10>
             </span></p>
 
             <p><span>
