--- a/detalhes_vaga.html
+++ b/detalhes_vaga.html
@@ -36,7 +36,7 @@
 
         <main>
             <h2><span>
-                <img src="../Imagens/bleach.png" alt="Triângulo" height=25 width=25>
+                <img src="Imagens/bleach.png" alt="Triângulo" height=25 width=25>
                 2E <!--A vaga em sí-->
             </span></h2>
             <em>
@@ -51,9 +51,9 @@
             </p>
             <span>
                 <a href="Piso1.html">
-                    <img src="../Imagens/back.png" alt="Botão de voltar" height=25 width=25>
+                    <img src="Imagens/back.png" alt="Botão de voltar" height=25 width=25>
                 </a>
-                <img src="../Imagens/clock.png" height=25 width=25 alt="Relógio">
+                <img src="Imagens/clock.png" height=25 width=25 alt="Relógio">
                 3 Minutos e 40 Secs
             </span>
         </main>
