--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
              <h2> Piso 3</h2> <hr>
              <h2> Piso 4 </h2> <hr>
             <a href="tarefas.html">
-                <img src="../Imagens/clipboard.png" alt='tarefas' 
+                <img src="Imagens/clipboard.png" alt='tarefas' 
                     width="50" height="50"></a>
             <a href="tarefas.html"><p>
                 <b>Tarefas
