--- a/Tarefas.html
+++ b/Tarefas.html
@@ -36,7 +36,7 @@
         <div class="popup">
         <header>
             <h1><span>
-                <img src="../Imagens/clipboard.png" alt='tarefas' width="50" height="50">
+                <img src="Imagens/clipboard.png" alt='tarefas' width="50" height="50">
                 <b>Tarefas</b>
             </span></h1>
         </header>
@@ -55,7 +55,7 @@
             </ul>
 
             <a href="index.html">
-            <img src="../Imagens/back.png" alt='Botão de voltar' width="25" height="25">
+            <img src="Imagens/back.png" alt='Botão de voltar' width="25" height="25">
             </a>
         </main>
 
