--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
                 Estacionamento MultiPark Insper <br>
                 End: Rua Quatá, 200, Vila Olímpia, SP
                 <a href="index.html">
-                    <img src="../Imagens/menu.png" alt="menu" width="50" height="50">
+                    <img src="Imagens/menu.png" alt="menu" width="50" height="50">
                 </a>
             </span></h1>
         </header>
@@ -34,7 +34,7 @@
             </h2><hr>
             
             <a href="index.html">
-                <img src="../Imagens/back.png" alt='botão voltar' width="50" height="50"></a>
+                <img src="Imagens/back.png" alt='botão voltar' width="50" height="50"></a>
         </main>
     </body>
 </html>
