--- a/teste.html
+++ b/teste.html
@@ -17,7 +17,7 @@
     <main>
     <h2><span>
         <a href="index.html">
-            <img src="../Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
+            <img src="Imagens/back.png" alt="Botão de Voltar" height=25 width=25>
         </a>
         <b>PISO 1</b>
     </span></h2>
